Removed password requirement for access to the stream

--- a/mpd.conf
+++ b/mpd.conf
@@ -238,7 +238,7 @@ audio_output {
 	host		"icecast"
 	port		"8000"
 	mount		"/brokenbeats"
-	password	"password"
+#	password	"password"
 #	quality		"5.0"
 	bitrate		"192"
 	format		"44100:16:2"
