--- a/mpd.conf
+++ b/mpd.conf
@@ -231,26 +231,26 @@ input {
 #
 # An example of a shout output (for streaming to Icecast):
 #
-audio_output {
-	type		"shout"
-	encoding	"mp3"			# optional
-	name		"D'n'B stream"
-	host		"icecast"
-	port		"8000"
-	mount		"/brokenbeats"
+#audio_output {
+#	type		"shout"
+#	encoding	"mp3"			# optional
+#	name		"D'n'B stream"
+#	host		"icecast"
+#	port		"8000"
+#	mount		"/brokenbeats"
 #	password	"password"
 #	quality		"5.0"
-	bitrate		"192"
-	format		"44100:16:2"
-	protocol	"icecast2"		# optional
-	user		"source"		# optional
-	description	"BOOYAAA"	# optional
-	url             "http://127.0.0.1/brokenbeats"    # optional
-	genre		"dnb"			# optional
+#	bitrate		"192"
+#	format		"44100:16:2"
+#	protocol	"icecast2"		# optional
+#	user		"source"		# optional
+#	description	"BOOYAAA"	# optional
+#	url             "http://127.0.0.1/brokenbeats"    # optional
+#	genre		"dnb"			# optional
 #	public		"no"			# optional
-	timeout		"2"			# optional
+#	timeout		"2"			# optional
 #	mixer_type      "software"              # optional
-}
+#}
 #
 # An example of a recorder output:
 #
@@ -266,17 +266,17 @@ audio_output {
 #
 # An example of a httpd output (built-in HTTP streaming server):
 #
-#audio_output {
-#	type		"httpd"
-#	name		"My HTTP Stream"
-#	encoder		"vorbis"		# optional, vorbis or lame
-#	port		"8000"
-#	bind_to_address "0.0.0.0"               # optional, IPv4 or IPv6
+audio_output {
+	type		"httpd"
+	name		"My HTTP Stream"
+	encoder		"lame"		# optional, vorbis or lame
+	port		"8001"
+	bind_to_address "0.0.0.0"               # optional, IPv4 or IPv6
 #	quality		"5.0"			# do not define if bitrate is defined
-#	bitrate		"128"			# do not define if quality is defined
-#	format		"44100:16:1"
-#	max_clients     "0"                     # optional 0=no limit
-#}
+	bitrate		"128"			# do not define if quality is defined
+	format		"44100:16:2"
+	max_clients     "0"                     # optional 0=no limit
+}
 #
 # An example of a pulseaudio output (streaming to a remote pulseaudio server)
 # Please see README.Debian if you want mpd to play through the pulseaudio
